css/portfolio.css
h4.item-intro {
    padding: 0;
    margin: 20px auto 40px auto;
}

.item-section {
    margin-top: 60px;
}

.portfolio-modal button {
    margin-top: 100px;
}

.portfolio-modal hr {
    width: 30px;
    border-color: #1B2627;
}

.portfolio-item-container {
/*    height:100%; 
    width:100%; */
    position:relative;
}

ul.project-list {
    text-align: left;
    padding: 15px;
}

ul.project-list li {
    padding-bottom: 10px;
}

@media screen and (max-width: 375px) {
	h2 {
		font-size: 15px;
	}
}

#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    bottom:0; left:0;
    z-index: -1;
    width: 100%;
    height: 100%;
    /*background: rgba(255, 215, 0, 1);  */
    background: rgba(255, 255, 255, .8);
    /*background: rgba(170, 170, 170, .2);*/
}

div.portfolio-hover hr {
    border-color: #222;
    width: 10%;
    -webkit-transition: all ease .s;
    -moz-transition: all ease .3s;
    transition: all ease .3s;
}

div.portfolio-hover:hover hr {
    width: 85%;
}


#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #222;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
    margin: 0;
}

#portfolio .portfolio-item .portfolio-caption {
    margin: 0 auto;
    padding: 25px 10px;
    max-width: 400px;
    text-align: center;
    background-color: #fff;
}

#portfolio .portfolio-item .portfolio-caption h4 {
    margin: 0;
}

#portfolio .portfolio-item .portfolio-caption p {
    margin: 12px 0 0 0;
    color: #222;
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
    font-style: italic;
    font-size: 14px;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}

.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin-bottom: 15px;
    font-size: 3em;
}

.portfolio-modal .modal-content p {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content p.item-intro {
    margin: 20px 0 30px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
}

.portfolio-modal .modal-content ul.list-inline {
    margin-top: 0;
    margin-bottom: 30px;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 50px;
    height: 50px;
    background-color: transparent;
    cursor: pointer;
}

iframe {
    margin: 50px, 0;
    width: 500px;
    background-color: #000;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 50px;
    margin-left: 35px;
    background-color: #111;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 50px;
    background-color: #111;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.portfolio-modal .modal-backdrop {
    display: none;
    opacity: 0;
}


.portfolio-caption h4 {
    display: inline;
    font-size: 1.3em;
}

.portfolio-caption img.trophy {
    height: 1.4em;
    margin-left: 10px;
    padding-bottom: 5px;
    opacity: 0.8;
}

.portfolio-caption img.trophy:hover {
    opacity: 0.9;
}
iframe {
    border: 0;
}

.portfolio-modal img .phone {
    max-width: 260px;
}

